parser/src/test/resources/corpus/valid/27_allocate_pro_rata.ff
rule "Allocate Pro Rata" {
  allocate USD 1,000,000 across investors of fund by basis
}
