parser/src/test/resources/corpus/invalid/24_allocate_missing_across.ff
rule "Allocate Missing Across" {
  allocate USD 100,000 investors of fund equally
}
